// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hidden /> should prioritize hide prop when present 1`] = `
<div>
  <span
    class="_-h-xs _-h-sm"
  />
</div>
`;

exports[`<Hidden /> should render a span component 1`] = `
<div>
  <span
    class=""
  />
</div>
`;

exports[`<Hidden /> should use the correct classes based on size rules 1`] = `
<div>
  <span
    class="_-h-xs _-h-sm _-h-xl"
  />
</div>
`;

exports[`<Hidden /> should use the id provided in the grid context 1`] = `
<div>
  <span
    class=""
  />
</div>
`;
